# flowlet

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  channels.json  config.json  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/plans/: request-log-detail.md
.github/workflows/: build-installers.yml
docs/: agent-integration-prompt.md  agent-terminal.md  ai-cost-ledger.md  architecture.md  breaking-refactor.md  channel-integration.md  claude-code-global-config.md  competitor-analysis.md  competitor-deep-analysis.md  competitors.md  config.md  deepseek-first.md  features.css.md  frontend-rewrite-progress.md  frontend-rewrite.md  longcat-first.md  opencode-global-config.md  opencode-local-integration.md  product.md  provider-capabilities.md  provider-presets.md  release-builds.md  request-capture-storage-plan.md  roadmap.md  scrape-balance-requirements.md  todo.md  windows-suspend-resume-network-resilience.md
docs/refactor/: 01-data-structures.md  02-proxy-routing.md  03-ui-spec.md  04-implementation-plan.md
public/icons/lobe/: LICENSE  README.md
scripts/: _zipdir.py  build-portable.mjs
src/: domain.ts  legacy-main.tsx  main.tsx  styles.css  vite-env.d.ts
src-new/: main.tsx  vitest.config.ts
src-new/app/: providers.tsx  router.tsx
src-new/app/preferences/: AppPreferences.test.tsx  AppPreferences.tsx  translations.ts
src-new/app/shell/: AppShell.module.css  AppShell.tsx  Nav.module.css  Sidebar.module.css  Sidebar.test.tsx  Sidebar.tsx  WindowControls.module.css  WindowControls.tsx
src-new/domains/: README.md
src-new/domains/account/: commands.test.ts  commands.ts  types.ts
src-new/domains/channel/: types.ts
src-new/domains/model/: commands.test.ts  commands.ts  types.ts
src-new/domains/proxy/: commands.ts
src-new/domains/request-log/: commands.test.ts  commands.ts  types.ts
src-new/domains/settings/: commands.test.ts  commands.ts
src-new/domains/usage/: commands.ts
src-new/features/agent-access/: AgentAccessSideSheet.module.css  AgentAccessSideSheet.tsx  OverviewAgentAccessCard.module.css  OverviewAgentAccessCard.test.tsx  OverviewAgentAccessCard.tsx
src-new/features/channel-accounts/: AccountEditorDrawer.module.css  AccountEditorDrawer.tsx  AccountList.tsx  AccountManagementSideSheet.module.css  AccountManagementSideSheet.test.tsx  AccountManagementSideSheet.tsx  AccountOnboarding.tsx  ChannelBrandLogo.module.css  ChannelBrandLogo.test.tsx  ChannelBrandLogo.tsx  LongCatPackManager.module.css  LongCatPackManager.test.tsx  LongCatPackManager.tsx  OverviewChannelAccountsCard.module.css  OverviewChannelAccountsCard.test.tsx  OverviewChannelAccountsCard.tsx  index.ts  useAccountActions.test.ts  useAccountActions.ts  useLatestBalanceSnapshots.ts
src-new/features/client-access/: ApiAccessSideSheet.module.css  ApiAccessSideSheet.tsx  CopyableAccessValue.module.css  CopyableAccessValue.tsx  OverviewClientAccessCard.module.css  OverviewClientAccessCard.test.tsx  OverviewClientAccessCard.tsx
src-new/features/exposed-models/: OverviewExposedModelsCard.module.css  OverviewExposedModelsCard.test.tsx  OverviewExposedModelsCard.tsx  useModelActions.ts
src-new/pages/usage/: UsageCostPage.tsx  (+2 more)
src-new/shared/: query-keys.ts
src-new/styles/: index.css  tokens.css
src-tauri/: Cargo.toml  flowlet.sqlite-shm  flowlet.sqlite-wal  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/core/: agent_environment.rs  agent_global_config.rs  agent_session_metadata.rs  agent_session_timeline.rs  agent_source_watcher.rs  channels_config.rs  codex_account.rs  config.rs  cost_ledger_source_probe.rs  logging.rs  metrics.rs  mod.rs  presets.rs  proxy.rs  proxy_http.rs  proxy_routing.rs  proxy_tests.rs  rate_limiter.rs  request_capture.rs  scrape_console.rs  storage.rs  storage_config.rs  storage_maintenance.rs  storage_stats.rs  storage_tasks.rs  storage_tests.rs  storage_usage.rs  sync.rs  ua_rules.json  usage.rs
src-tauri/src/core/web/: mod.rs
src/app/: App.tsx  providers.tsx  routeHelpers.ts  router.tsx  useFlowletActions.ts  useFlowletData.ts
src/bootstrap/: uiVersion.ts
src/components/: ChannelLogo.tsx
src/features/: README.md
src/pages/: ChannelsPage.tsx  ClaudeCodePage.tsx  ClearLogsModal.tsx  ClientsPage.tsx  LogDetailDrawer.tsx  LogsPage.tsx  OverviewPage.tsx  RoutesPage.tsx  StatsPage.tsx  UsagePage.tsx  index.ts
src/services/: flowletApi.ts
src/shared/: query-keys.ts
src/styles/: base.css  features.css  layout.css  reset.css  tokens.css  ui.css
(+271 files in other folders)
