[package]
name = "flowlet"
version = "0.1.0"
description = "本地 AI 请求路由客户端"
authors = ["Flowlet"]
edition = "2021"
default-run = "flowlet"

[lib]
name = "flowlet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
futures-util = "0.3"
jsonc-parser = { version = "0.33", features = ["cst", "serde", "serde_json"] }
notify = "8.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "signal", "process", "time", "io-util"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
