[package]
name = "flowlet"
version = "0.1.0"
description = "本地 AI 请求路由客户端"
authors = ["Flowlet"]
edition = "2021"
default-run = "flowlet"

[lib]
name = "flowlet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axum = "0.8"
base64 = "0.22"
# 仅用于请求日志捕获层：上游可能返回 gzip/deflate/br 压缩体，需在落库前解压，
# 否则响应 Body 在 UI 中显示为乱码。reqwest 未启用自动解压 feature，故在此自行处理。
brotli = "8"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
flate2 = "1"
futures-util = "0.3"
jsonc-parser = { version = "0.33", features = ["cst", "serde", "serde_json"] }
notify = "8.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
url = "2"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "signal", "process", "time", "io-util"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Globalization", "Win32_Storage_FileSystem", "Win32_System_Threading"] }
zip = { version = "4", default-features = false, features = ["deflate"] }
zstd = "0.13"

[target.'cfg(windows)'.dependencies]
# Tauri 的高层 on_web_resource_request 只覆盖自定义协议；控制台是外部 HTTPS，
# 因此 Windows 直接订阅 WebView2 的 WebResourceResponseReceived 读取响应 body。
webview2-com = "0.38.2"
windows = { version = "0.61", features = ["Win32_System_Com"] }

[target.'cfg(target_os = "linux")'.dependencies]
# Ubuntu 使用 WebKitGTK 的 resource-load-started + WebResource::data 获取页面
# 自己发出的 HTTPS 响应，不复刻 Cookie、签名或请求头。
webkit2gtk = "2.0.2"
